5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1672_2471.log
== TEST (2019-04-27 18:41:42) 
-- CODE:
i=int(input("Digite a idade: "))
imc=int(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
-- OUTPUT:
Entradas: 0 anos e IMC 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:41:57) 
-- CODE:
i=int(input("Digite a idade: "))
imc=int(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
-- OUTPUT:
Entradas: 0 anos e IMC 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:42:16) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:44:06) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:44:19) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:48:35) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco",mensagem)
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:48:50) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:",mensagem)
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:50:58) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:",mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:51:14) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:",mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:51:31) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:",mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- EXECUTION TIME:
0.133018
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco:
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:51:37) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:",mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:51:48) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:",mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:52:20) 
-- CODE:
i=float(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:",mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0.0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:52:27) 
-- CODE:
i=float(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:",mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0.0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:53:17) 
-- CODE:
i=float(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0.0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:53:23) 
-- CODE:
i=float(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0.0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:53:47) 
-- CODE:
i=int(input("Digite a idade: "))
imc=int(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:54:18) 
-- CODE:
i=int(input("Digite a idade: "))
imc=int(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- EXECUTION TIME:
0.211809
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25
Risco:
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:54:20) 
-- CODE:
i=int(input("Digite a idade: "))
imc=int(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:54:35) 
-- CODE:
i=int(input("Digite a idade: "))
imc=int(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:54:43) 
-- CODE:
i=int(input("Digite a idade: "))
imc=int(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:54:58) 
-- CODE:
i=int(input("Digite a idade: "))
imc=int(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:55:13) 
-- CODE:
i=int(input("Digite a idade: "))
imc=int(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:55:45) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:57:12) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22,0):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22,0):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22,0):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22,0):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:57:32) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22,0):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22,0):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22,0):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22,0):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:57:53) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22,0):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22,0):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22,0):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22,0):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:58:12) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22,0):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22,0):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22,0):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22,0):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:58:28) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22,0):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22,0):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc<22,0):
	mensagem="Médio"
	print("Risco:",mensagem)
elif(i>=45 and imc>=22,0):
	mensagem="Alto"
	print("Risco:",mensagem)
	
-- EXECUTION TIME:
0.210419
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco: Baixo
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Baixo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:59:49) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22,0):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc<22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22,0):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:00:01) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22,0):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc<22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22,0):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:00:19) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22,0):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc<22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22,0):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 19:00:51) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22,0):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc<22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22,0):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- EXECUTION TIME:
0.225788
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco: Baixo
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Baixo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:01:06) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22,0):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc<22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22,0):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:01:23) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22,0):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc<22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22,0):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:01:27) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22,0):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc<22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22,0):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:01:36) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22,0):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc<22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22,0):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:01:49) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22,0):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc<22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22,0):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:26:23) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22,0):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc<22,0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22,0):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:27:01) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22.0):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22.0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc<22.0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22.0):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:27:14) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22.0):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22.0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc<22.0):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22.0):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:28:07) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:31:06) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:31:46) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
else(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- ERROR:
File "XXXX", line 7
    else(i<45 and imc<22):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:31:54) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
elif(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:34:32) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
else:
	if(i<45 and imc<22):
	mensagem="Baixo"
	print("Risco:", mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- ERROR:
File "XXXX", line 9
    mensagem="Baixo"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:34:45) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
else:
	if(i<45 and imc<22):
		mensagem="Baixo"
		print("Risco:", mensagem)
elif(i<45 and imc>=22):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- ERROR:
File "XXXX", line 11
    elif(i<45 and imc>=22):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:35:08) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
else:
	if(i<45 and imc<22):
		mensagem="Baixo"
		print("Risco:", mensagem)
	elif(i<45 and imc>=22):
		mensagem="Médio"
		print("Risco:", mensagem)
elif(i>=45 and imc<22):
	mensagem="Médio"
	print("Risco:", mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- ERROR:
File "XXXX", line 14
    elif(i>=45 and imc<22):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:35:29) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
else:
	if(i<45 and imc<22):
		mensagem="Baixo"
		print("Risco:", mensagem)
	elif(i<45 and imc>=22):
		mensagem="Médio"
		print("Risco:", mensagem)
	elif(i>=45 and imc<22):
		mensagem="Médio"
		print("Risco:", mensagem)
elif(i>=45 and imc>=22):
	mensagem="Alto"
	print("Risco:", mensagem)
	
-- ERROR:
File "XXXX", line 17
    elif(i>=45 and imc>=22):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:35:52) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
else:
	if(i<45 and imc<22):
		mensagem="Baixo"
		print("Risco:", mensagem)
	elif(i<45 and imc>=22):
		mensagem="Médio"
		print("Risco:", mensagem)
	elif(i>=45 and imc<22):
		mensagem="Médio"
		print("Risco:", mensagem)
	elif(i>=45 and imc>=22):
		mensagem="Alto"
		print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:36:10) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
else:
	if(i<45 and imc<22):
		mensagem="Baixo"
		print("Risco:", mensagem)
	elif(i<45 and imc>=22):
		mensagem="Médio"
		print("Risco:", mensagem)
	elif(i>=45 and imc<22):
		mensagem="Médio"
		print("Risco:", mensagem)
	elif(i>=45 and imc>=22):
		mensagem="Alto"
		print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:36:23) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
else:
	if(i<45 and imc<22):
		mensagem="Baixo"
		print("Risco:", mensagem)
	elif(i<45 and imc>=22):
		mensagem="Médio"
		print("Risco:", mensagem)
	elif(i>=45 and imc<22):
		mensagem="Médio"
		print("Risco:", mensagem)
	elif(i>=45 and imc>=22):
		mensagem="Alto"
		print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 20:36:35) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
else:
	if(i<45 and imc<22):
		mensagem="Baixo"
		print("Risco:", mensagem)
	elif(i<45 and imc>=22):
		mensagem="Médio"
		print("Risco:", mensagem)
	elif(i>=45 and imc<22):
		mensagem="Médio"
		print("Risco:", mensagem)
	elif(i>=45 and imc>=22):
		mensagem="Alto"
		print("Risco:", mensagem)
	
-- EXECUTION TIME:
0.144783
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco:
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:36:38) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
else:
	if(i<45 and imc<22):
		mensagem="Baixo"
		print("Risco:", mensagem)
	elif(i<45 and imc>=22):
		mensagem="Médio"
		print("Risco:", mensagem)
	elif(i>=45 and imc<22):
		mensagem="Médio"
		print("Risco:", mensagem)
	elif(i>=45 and imc>=22):
		mensagem="Alto"
		print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:37:03) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
else:
	if(i<45 and imc<22):
		mensagem="Baixo"
		print("Risco:", mensagem)
	elif(i<45 and imc>=22):
		mensagem="Medio"
		print("Risco:", mensagem)
	elif(i>=45 and imc<22):
		mensagem="Medio"
		print("Risco:", mensagem)
	elif(i>=45 and imc>=22):
		mensagem="Alto"
		print("Risco:", mensagem)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 20:37:11) 
-- CODE:
i=int(input("Digite a idade: "))
imc=float(input("Digite o imc: "))
print("Entradas:",i,"anos e IMC",imc)
if(i<=0 or i>130 or imc<=0):
	mensagem= "Dados invalidos"
	print(mensagem)
else:
	if(i<45 and imc<22):
		mensagem="Baixo"
		print("Risco:", mensagem)
	elif(i<45 and imc>=22):
		mensagem="Medio"
		print("Risco:", mensagem)
	elif(i>=45 and imc<22):
		mensagem="Medio"
		print("Risco:", mensagem)
	elif(i>=45 and imc>=22):
		mensagem="Alto"
		print("Risco:", mensagem)
	
-- EXECUTION TIME:
0.145704
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
